solve Icon overlap in the window component

--- a/css/layout.css
+++ b/css/layout.css
@@ -16,6 +16,14 @@ body{
 	min-width:760px;
 	
 }
+.wrapper-foot{			/*内容content*/
+    width: 80%;
+    /*height: 100%;
+    background-color: #606966;*/
+    margin: 0px auto;
+	padding: 50px 0 20px 0;	/*同步：inforight、three标签*/
+	
+}
 .heading{
     width: 100%;
     height: 90px;
@@ -65,7 +73,7 @@ a:link,a:visited{
     font-weight: bold;
     color: darkgray;
     text-align: center;
-    padding: 6px;       /*优先级高*/
+    /*padding: 6px;       优先级高*/
     text-decoration: none;
 }
 a:hover,a:active{
@@ -125,6 +133,7 @@ a:hover,a:active{
 }
 
 .footing{
+	/*background-color:green;*/
     padding-top: 20px;
 	padding-bottom: 10px;
     text-align: center;	
